--- a/KOscores.html
+++ b/KOscores.html
@@ -204,7 +204,7 @@
     <table class="resultsTable">
         <thead>
             <tr>
-                <th colspan="2">Champion</th>
+                <th colspan="2">C</th>
                 <!-- Participant names will be appended here -->
             </tr>
             <tr>
@@ -223,7 +223,7 @@
     <table class="resultsTable">
         <thead>
             <tr>
-                <th colspan="2">Best Players</th>
+                <th colspan="2">BP</th>
                 <!-- Participant names will be appended here -->
             </tr>
             <tr>
